bambu-macro/rust_hls_macro/tests/fails_on_missing_hls_function.stderr
error: No hls main function found
 --> tests/fails_on_missing_hls_function.rs:5:9
  |
5 | pub mod adder {}
  |         ^^^^^
