bambu-macro/rust_hls_macro/tests/fails_on_missing_hls_function.rs
/// There can only be one HLS function per module
use rust_hls::hls;

#[hls]
pub mod adder {}

fn main() {}
